@@ -14,6 +14,8 @@ pypet 0.1b.4
 *   The user is advised to use `environment.f_run(manager.run_network)`, instead of
     `environment.f_run(run_network, manager)`
 
+*   Now there is the distinction between `small`, `large`, and `summary` tables
+
 
 
 pypet 0.1b.3
